--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-runtime-attributes/version-configuration-runtime-attributes.less
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-runtime-attributes/version-configuration-runtime-attributes.less
@@ -40,4 +40,10 @@
             overflow-x: auto;
         }
     }
+
+    .java-attribute {
+        .textarea-field {
+            height: 70px;
+        }
+    }
 }
