--- a/src/nuclio/projects/project/functions/version/version.less
+++ b/src/nuclio/projects/project/functions/version/version.less
@@ -67,7 +67,8 @@
     .create-annotation-button,
     .create-label-button,
     .create-binding-button,
-    .create-ingress-button {
+    .create-ingress-button,
+    .create-subscription-button {
         display: flex;
         align-items: center;
         height: 36px;
