--- a/src/nuclio/projects/project/functions/version/version-configuration/version-configuration.less
+++ b/src/nuclio/projects/project/functions/version/version-configuration/version-configuration.less
@@ -50,6 +50,10 @@
                 }
             }
         }
+
+        .shell-runtime {
+            flex-direction: row-reverse;
+        }
     }
 
     .invisible-block {
