--- a/src/nuclio/common/components/edit-item/edit-item.tpl.html
+++ b/src/nuclio/common/components/edit-item/edit-item.tpl.html
@@ -399,6 +399,7 @@
                                              data-submit-on-fly="true"
                                              data-item-index="$index"
                                              data-value-validation-pattern="$ctrl.subscriptionQoSValidationPattern"
+                                             data-value-placeholder="0, 1 or 2"
                                              data-action-handler-callback="$ctrl.handleSubscriptionAction(actionType, index)"
                                              data-change-data-callback="$ctrl.onChangeData(newData, index)">
                         </ncl-key-value-input>
