--- a/src/nuclio/common/components/key-value-input/key-value-input.tpl.html
+++ b/src/nuclio/common/components/key-value-input/key-value-input.tpl.html
@@ -79,7 +79,7 @@
                                             data-form-object="$ctrl.keyValueInputForm"
                                             data-validation-is-required="!$ctrl.valueOptional"
                                             data-validation-pattern="$ctrl.valueValidationPattern"
-                                            data-placeholder-text="Type value...">
+                                            data-placeholder-text="{{$ctrl.valuePlaceholder}}">
                 </igz-validating-input-field>
             </div>
         </div>
