--- a/src/nuclio/common/components/key-value-input/key-value-input.tpl.html
+++ b/src/nuclio/common/components/key-value-input/key-value-input.tpl.html
@@ -13,14 +13,16 @@
                  data-ng-class="{'use-type': $ctrl.useType, 'all-value-types': $ctrl.allValueTypes}">
                 <label for="key" data-ng-if="$ctrl.useLabels" class="key-label">Key:</label>
                 <igz-validating-input-field class="nuclio-validating-input input-key"
-                                        data-field-type="input"
-                                        data-input-name="key"
-                                        data-input-value="$ctrl.data.name"
-                                        data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
-                                        data-update-data-field="name"
-                                        data-form-object="$ctrl.keyValueInputForm"
-                                        data-validation-is-required="!$ctrl.keyOptional"
-                                        data-placeholder-text="Type key"></igz-validating-input-field>
+                                            data-field-type="input"
+                                            data-input-name="key"
+                                            data-input-value="$ctrl.data.name"
+                                            data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
+                                            data-update-data-field="name"
+                                            data-form-object="$ctrl.keyValueInputForm"
+                                            data-validation-is-required="!$ctrl.keyOptional"
+                                            data-validation-pattern="$ctrl.keyValidationPattern"
+                                            data-placeholder-text="Type key">
+                </igz-validating-input-field>
             </div>
 
             <div class="input-container input-type-wrapper"
@@ -37,7 +39,8 @@
                                       data-placeholder="Select type..."
                                       data-item-select-callback="$ctrl.onTypeChanged(item, isItemChanged)"
                                       data-on-open-dropdown="$ctrl.openDropdown"
-                                      data-on-close-dropdown="$ctrl.closeDropdown()"></igz-default-dropdown>
+                                      data-on-close-dropdown="$ctrl.closeDropdown()">
+                </igz-default-dropdown>
 
             </div>
 
@@ -49,14 +52,15 @@
                     <span data-ng-if="$ctrl.isVisibleByType('configmap')">ConfigMap key:</span>
                 </label>
                 <igz-validating-input-field class="nuclio-validating-input input-value-key"
-                                        data-field-type="input"
-                                        data-input-name="value-key"
-                                        data-input-value="$ctrl.getInputKey()"
-                                        data-update-data-callback="$ctrl.inputKeyCallback(newData)"
-                                        data-update-data-field="value-key"
-                                        data-form-object="$ctrl.keyValueInputForm"
-                                        data-validation-is-required="!$ctrl.valueOptional"
-                                        data-placeholder-text="Type key..."></igz-validating-input-field>
+                                            data-field-type="input"
+                                            data-input-name="value-key"
+                                            data-input-value="$ctrl.getInputKey()"
+                                            data-update-data-callback="$ctrl.inputKeyCallback(newData)"
+                                            data-update-data-field="value-key"
+                                            data-form-object="$ctrl.keyValueInputForm"
+                                            data-validation-is-required="!$ctrl.valueOptional"
+                                            data-placeholder-text="Type key...">
+                </igz-validating-input-field>
             </div>
 
             <div class="input-container input-value-wrapper"
@@ -67,14 +71,16 @@
                     <span data-ng-if="$ctrl.isVisibleByType('configmap')">ConfigMap name:</span>
                 </label>
                 <igz-validating-input-field class="nuclio-validating-input input-value"
-                                        data-field-type="input"
-                                        data-input-name="value"
-                                        data-input-value="$ctrl.getInputValue()"
-                                        data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
-                                        data-update-data-field="value"
-                                        data-form-object="$ctrl.keyValueInputForm"
-                                        data-validation-is-required="!$ctrl.valueOptional"
-                                        data-placeholder-text="Type value..."></igz-validating-input-field>
+                                            data-field-type="input"
+                                            data-input-name="value"
+                                            data-input-value="$ctrl.getInputValue()"
+                                            data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
+                                            data-update-data-field="value"
+                                            data-form-object="$ctrl.keyValueInputForm"
+                                            data-validation-is-required="!$ctrl.valueOptional"
+                                            data-validation-pattern="$ctrl.valueValidationPattern"
+                                            data-placeholder-text="{{$ctrl.valuePlaceholder}}">
+                </igz-validating-input-field>
             </div>
         </div>
         <div class="three-dot-menu">
