Added "Log Level" drop-down menu in event pane

--- a/src/nuclio/projects/project/functions/version/version-code/function-event-pane/test-events-navigation-tabs/test-events-navigation-tabs.less
+++ b/src/nuclio/projects/project/functions/version/version-code/function-event-pane/test-events-navigation-tabs/test-events-navigation-tabs.less
@@ -47,4 +47,13 @@
             margin-top: -4px;
         }
     }
+
+    .default-dropdown {
+        float: left;
+        width: 105px;
+
+        .default-dropdown-field:not(:hover) {
+            border-color: transparent;
+        }
+    }
 }
