fixed hidden buttons on test-pane

--- a/src/nuclio/projects/project/functions/version/version-code/function-event-pane/function-event-pane.less
+++ b/src/nuclio/projects/project/functions/version/version-code/function-event-pane/function-event-pane.less
@@ -207,6 +207,7 @@
         transition: margin-left 0.3s ease-in-out;
 
         .ui-layout-row {
+            margin-top: 40px;
             overflow: hidden;
 
             .ui-layout-container {
