--- a/src/nuclio/projects/project/functions/version/version.less
+++ b/src/nuclio/projects/project/functions/version/version.less
@@ -69,6 +69,7 @@
     .create-label-button,
     .create-binding-button,
     .create-ingress-button,
+    .create-topic-button,
     .create-subscription-button {
         display: flex;
         align-items: center;
