Impl [Nuclio] Triggers: Kafka: Remove URL & Topics; Add Brokers

--- a/src/nuclio/projects/project/functions/version/version.less
+++ b/src/nuclio/projects/project/functions/version/version.less
@@ -70,6 +70,7 @@
     .create-binding-button,
     .create-ingress-button,
     .create-topic-button,
+    .create-broker-button,
     .create-subscription-button {
         display: flex;
         align-items: center;
