--- a/src/nuclio/common/components/edit-item/edit-item.tpl.html
+++ b/src/nuclio/common/components/edit-item/edit-item.tpl.html
@@ -508,6 +508,35 @@
                     Create a new topic
                 </div>
             </div>
+
+            <div class="igz-col-45 attribute-field brokers-wrapper"
+                 data-ng-if="$ctrl.isClassSelected() && $ctrl.isKafkaTrigger()">
+
+                <div class="field-label">Brokers</div>
+
+                <div>
+                    <div class="table-body" data-ng-repeat="broker in $ctrl.brokers">
+                        <ncl-key-value-input class="new-label-input"
+                                             data-list-class="brokers-wrapper"
+                                             data-change-state-broadcast="change-state-deploy-button"
+                                             data-row-data="broker"
+                                             data-use-type="false"
+                                             data-submit-on-fly="true"
+                                             data-item-index="$index"
+                                             data-only-value-input="true"
+                                             data-value-validation-pattern="$ctrl.stringValidationPattern"
+                                             data-action-handler-callback="$ctrl.handleBrokerAction(actionType, index)"
+                                             data-change-data-callback="$ctrl.onChangeData(newData, index)">
+                        </ncl-key-value-input>
+                    </div>
+                </div>
+
+                <div class="create-broker-button"
+                     data-ng-click="$ctrl.addNewBroker($event)">
+                    <span class="igz-icon-add-round"></span>
+                    Create a new broker
+                </div>
+            </div>
         </div>
     </form>
 </div>
