Changed dividers color

--- a/src/nuclio/projects/project/functions/version/version-code/function-event-pane/function-event-pane.less
+++ b/src/nuclio/projects/project/functions/version/version-code/function-event-pane/function-event-pane.less
@@ -1,8 +1,7 @@
 .test-events-pane {
     height: 100%;
     border: 1px solid @pale-grey;
-    .duskThree(0.64);
-    border-left: 1px solid @color;
+    border-left: 3px solid @pale-grey;
     border-top: none;
     position: relative;
     background-color: @white;
@@ -526,8 +525,7 @@
             align-items: center;
             justify-content: space-between;
             background-color: @pale-grey-three;
-            .duskThree(0.64);
-            border-top: 1px solid @color;
+            border-top: 3px solid @pale-grey;;
             height: 39px;
 
             .left-side-elements {
