--- a/src/nuclio/projects/project/functions/version/version-code/function-event-pane/function-event-pane.less
+++ b/src/nuclio/projects/project/functions/version/version-code/function-event-pane/function-event-pane.less
@@ -1,7 +1,6 @@
 .test-events-pane {
     height: 100%;
     border: 1px solid @pale-grey;
-    border-left: 3px solid @pale-grey;
     border-top: none;
     position: relative;
     background-color: @white;
@@ -209,6 +208,8 @@
             }
 
             .ui-splitbar {
+                background: @pale-grey;
+
                 a {
                     display: none;
                 }
@@ -525,7 +526,6 @@
             align-items: center;
             justify-content: space-between;
             background-color: @pale-grey-three;
-            border-top: 3px solid @pale-grey;;
             height: 39px;
 
             .left-side-elements {
