--- a/src/nuclio/projects/project/functions/version/version-code/version-code.less
+++ b/src/nuclio/projects/project/functions/version/version-code/version-code.less
@@ -13,7 +13,7 @@
         }
 
         .ui-splitbar {
-            background: transparent;
+            background: @pale-grey;
 
             a {
                 display: none;
