--- a/src/nuclio/projects/project/functions/version/version-code/version-code.less
+++ b/src/nuclio/projects/project/functions/version/version-code/version-code.less
@@ -3,147 +3,167 @@
     display: flex;
     justify-content: space-between;
     padding-bottom: 24px !important;
+    position: relative;
 
-    .igz-scrollable-container {
-        flex-grow: 1;
-        height: 100%;
-        min-width: 0;
+    &.ui-layout-column {
+        overflow: hidden;
 
-        .ncl-monaco {
-            height: 100%;
+        .ui-layout-container {
+            overflow: hidden;
         }
 
-        .ncl-edit-version-code-wrapper {
-            height: 100%;
-            padding: 24px 41px 0;
-            min-width: 700px;
+        .ui-splitbar {
+            background: @pale-grey;
 
-            .ncl-code-entry-url {
-                max-width: 700px;
-            }
-
-            .ncl-edit-version-code-form {
-                display: flex;
-                flex-direction: column;
-                height: 100%
-            }
-        }
-
-        .section-wrapper {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            padding: 18px 39px 0 23px;
-        }
-
-        .code-edit-section {
-            display: flex;
-            flex-direction: column;
-            flex: 1;
-            position: relative;
-
-            .code-editor-drop-zone {
-                position: absolute;
-                top: 0;
-                left: 0;
-                right: 0;
-                bottom: 0;
-                background-color: rgb(200, 200, 200);
-                outline: 3px dashed black;
-                outline-offset: -10px;
+            a {
                 display: none;
-
-                &.dragover {
-                    display: block;
-
-                    &:before {
-                        content: 'Drop files here';
-                        display: inline-block;
-                        position: absolute;
-                        top: 50%;
-                        left: 50%;
-                        transform: translate(-50%, -50%);
-                        font-size: xx-large;
-                    }
-                }
-            }
-
-            .monaco-code-editor {
-                width: 100%;
-                height: 100%;
-                position: relative;
-                display: flex;
-                flex-direction: column;
-
-                .ncl-monaco {
-                    position: relative;
-                    flex-direction: column;
-                }
             }
         }
+    }
 
-        .code-entry-section {
-            min-height: 102px;
-            margin-bottom: 20px;
-            background-color: @white;
-            border: 1px solid @pale-grey-two;
+    .code-section {
+        width: 100%;
 
-            .code-entry-row {
+        .igz-scrollable-container {
+            flex-grow: 1;
+            height: 100%;
+            min-width: 0;
+
+            .ncl-monaco {
+                height: 100%;
+            }
+
+            .ncl-edit-version-code-wrapper {
+                height: 100%;
+                padding: 24px 41px 0;
+                min-width: 700px;
+
+                .ncl-code-entry-url {
+                    max-width: 700px;
+                }
+
+                .ncl-edit-version-code-form {
+                    display: flex;
+                    flex-direction: column;
+                    height: 100%
+                }
+            }
+
+            .section-wrapper {
                 display: flex;
-                margin-bottom: 24px;
+                flex-direction: column;
+                justify-content: center;
+                padding: 18px 39px 0 23px;
+            }
 
-                .code-entry-col {
-                    margin-right: 16px;
+            .code-edit-section {
+                display: flex;
+                flex-direction: column;
+                flex: 1;
+                position: relative;
 
-                    .col-label {
-                        margin-bottom: 2px;
-                        font-size: 14px;
-                        color: @dusk-three;
-                    }
-                }
+                .code-editor-drop-zone {
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    right: 0;
+                    bottom: 0;
+                    background-color: rgb(200, 200, 200);
+                    outline: 3px dashed black;
+                    outline-offset: -10px;
+                    display: none;
 
-                .code-entry-type-col {
-                    width: 22%;
-                }
+                    &.dragover {
+                        display: block;
 
-                .code-entry-runtime-col {
-                    width: 22%;
-                }
-
-                .code-entry-handler-col {
-                    width: 41%;
-                }
-
-                .code-entry-theme-col {
-                    width: 15%;
-                }
-
-                .code-entry-button-col {
-                    min-width: 128px;
-
-                    .upload-button {
-                        height: 36px;
-                        width: 128px;
-                        margin: 21px 0 0 0;
-                        padding: 0;
-
-                        i {
+                        &:before {
+                            content: 'Drop files here';
                             display: inline-block;
-                            font-size: 16px;
-                            margin-left: 20px;
-                            vertical-align: middle;
-                        }
-                        span {
-                            margin-left: 4px;
-                            letter-spacing: 1px;
-                            vertical-align: middle;
+                            position: absolute;
+                            top: 50%;
+                            left: 50%;
+                            transform: translate(-50%, -50%);
+                            font-size: xx-large;
                         }
                     }
                 }
 
-                .code-entry-url-col {
+                .monaco-code-editor {
                     width: 100%;
-                    margin-right: 160px;
+                    height: 100%;
+                    position: relative;
+                    display: flex;
+                    flex-direction: column;
+
+                    .ncl-monaco {
+                        position: relative;
+                        flex-direction: column;
+                    }
+                }
+            }
+
+            .code-entry-section {
+                margin-bottom: 20px;
+                background-color: @white;
+                border: 1px solid @pale-grey-two;
+
+                .code-entry-row {
+                    display: flex;
+                    margin-bottom: 24px;
+
+                    .code-entry-col {
+                        margin-right: 16px;
+
+                        .col-label {
+                            margin-bottom: 2px;
+                            font-size: 14px;
+                            color: @dusk-three;
+                        }
+                    }
+
+                    .code-entry-type-col {
+                        width: 22%;
+                    }
+
+                    .code-entry-runtime-col {
+                        width: 22%;
+                    }
+
+                    .code-entry-handler-col {
+                        width: 41%;
+                    }
+
+                    .code-entry-theme-col {
+                        width: 15%;
+                    }
+
+                    .code-entry-button-col {
+                        min-width: 128px;
+
+                        .upload-button {
+                            height: 36px;
+                            width: 128px;
+                            margin: 21px 0 0 0;
+                            padding: 0;
+
+                            i {
+                                display: inline-block;
+                                font-size: 16px;
+                                margin-left: 20px;
+                                vertical-align: middle;
+                            }
+                            span {
+                                margin-left: 4px;
+                                letter-spacing: 1px;
+                                vertical-align: middle;
+                            }
+                        }
+                    }
+
+                    .code-entry-url-col {
+                        width: 100%;
+                        margin-right: 160px;
+                    }
                 }
             }
         }
