test pabe headers visual issue

--- a/src/nuclio/projects/project/functions/version/version-code/function-event-pane/test-events-navigation-tabs/test-events-navigation-tabs.less
+++ b/src/nuclio/projects/project/functions/version/version-code/function-event-pane/test-events-navigation-tabs/test-events-navigation-tabs.less
@@ -1,4 +1,5 @@
 .ncl-test-events-navigation-tabs {
+    display: flex;
     background: #f8f8fb;
     height: 40px;
     border-top: 1px solid @pale-grey;
