IG-2017 [Nuclio] Add "Export" button to project screen

--- a/src/igz_controls/less/icons.less
+++ b/src/igz_controls/less/icons.less
@@ -387,6 +387,10 @@
     font-size: 20px;
 }
 
+.igz-icon-export-yml {
+    .generateIconClass(988)
+}
+
 .igz-icon-resolved {
     .generateIconClass(955);
 }
