IG-2016 [Nuclio] Code tab: Add "Change text size" button

--- a/src/nuclio/common/components/monaco/monaco.less
+++ b/src/nuclio/common/components/monaco/monaco.less
@@ -9,7 +9,11 @@
             padding-top: 0;
         }
 
-        > div {
+        .ncl-monaco-top-row {
+            display: block;
+        }
+
+        .ncl-monaco-editor {
             height: 100%;
         }
     }
