--- a/src/igz_controls/less/icons.less
+++ b/src/igz_controls/less/icons.less
@@ -589,6 +589,10 @@
     .generateIconClass(987);
 }
 
+.igz-icon-format-size {
+    .generateIconClass(a11);
+}
+
 .igz-icon-priority-realtime, .igz-icon-priority-high, .igz-icon-priority-standard, .igz-icon-priority-low {
     display: inline-block;
     font-size: 17px;
