Added possibility to export project(s)

--- a/src/nuclio/projects/projects.less
+++ b/src/nuclio/projects/projects.less
@@ -1,4 +1,10 @@
 ncl-projects {
+
+    igz-info-page-actions-bar {
+        igz-default-dropdown {
+            display: inline-block;
+        }
+    }
     .search-input-not-found {
         height: 48px;
         background-color: @light-grey;
