--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build.less
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-build/version-configuration-build.less
@@ -2,6 +2,14 @@
     .build-field {
         margin-bottom: 23px;
 
+        &.build-base-image-field {
+            padding-right: 10px;
+        }
+
+        &.build-onbuild-image-field {
+            padding-left: 10px;
+        }
+
         .field-label {
             font-family: @font-family-sans-serif;
             font-size: 14px;
@@ -22,7 +30,13 @@
             }
         }
 
-        .build-command-field,.build-dependencies-field {
+        .build-textarea-input {
+            &.build-commands-input {
+                .textarea-field {
+                    height: 150px;
+                }
+            }
+
             .textarea-field {
                 height: 70px;
                 resize: none;
