enable/disable function without deploying

--- a/src/igz_controls/less/icons.less
+++ b/src/igz_controls/less/icons.less
@@ -593,6 +593,14 @@
     .generateIconClass(a11);
 }
 
+.igz-icon-pause {
+    .generateIconClass(a12);
+}
+
+.igz-icon-play {
+    .generateIconClass(a13);
+}
+
 .igz-icon-priority-realtime, .igz-icon-priority-high, .igz-icon-priority-standard, .igz-icon-priority-low {
     display: inline-block;
     font-size: 17px;
