Impl [Nuclio] Projects: Add "Import project" action

--- a/src/nuclio/projects/projects.less
+++ b/src/nuclio/projects/projects.less
@@ -4,6 +4,10 @@ ncl-projects {
         igz-default-dropdown {
             display: inline-block;
         }
+
+        .project-import-input {
+            display: none;
+        }
     }
     .search-input-not-found {
         height: 48px;
