Fix [Projects] Checkbox is still checked after failed deletion

--- a/src/igz_controls/less/dialogs.less
+++ b/src/igz_controls/less/dialogs.less
@@ -43,6 +43,7 @@
 
             .error-list {
                 list-style-type: none;
+                padding-inline-start: 0;
 
                 .error-list-item {
                     margin-bottom: 5px;
