--- a/src/igz_controls/less/table.less
+++ b/src/igz_controls/less/table.less
@@ -320,27 +320,38 @@
                     overflow: visible;
 
                     .item-name {
-                        background-color: @item-name-bg-color;
-                        border-width: 1px;
-                        border-style: solid;
-                        border-color: @item-name-border-color;
-                        font-weight: bold;
                         width: 100%;
                         height: 100%;
                         display: flex;
                         align-items: center;
-                        transition: all 0.1s;
 
                         .text-ellipsis {
                             margin-left: 16px;
                         }
 
-                        &:after {
-                            color: @item-name-after-color;
-                            content: '\e914';
-                            font-family: 'iguazio';
-                            font-size: 11px;
-                            margin-right: 14px;
+                        &.drilldown {
+                            background-color: @item-name-bg-color;
+                            border-width: 1px;
+                            border-style: solid;
+                            border-color: @item-name-border-color;
+                            font-weight: bold;
+                            transition: all 0.1s;
+
+                            &:hover {
+                                box-sizing: content-box;
+                                box-shadow: @item-name-hover-box-shadow;
+                                margin: 0 0 0 -1px;
+                                padding: 1px 0 1px;
+                                z-index: 99;
+                            }
+
+                            &:after {
+                                color: @item-name-after-color;
+                                content: '\e914';
+                                font-family: 'iguazio';
+                                font-size: 11px;
+                                margin-right: 14px;
+                            }
                         }
 
                         .item-description {
@@ -353,14 +364,6 @@
                                 color: @item-name-description-accent-color;
                                 font-weight: 700;
                             }
-                        }
-
-                        &:hover {
-                            box-sizing: content-box;
-                            box-shadow: @item-name-hover-box-shadow;
-                            margin: 0 0 0 -1px;
-                            padding: 1px 0 1px;
-                            z-index: 99;
                         }
 
                     }
