Add 'Clear' button to cron schedule trigger

--- a/src/nuclio/common/components/edit-item/edit-item.less
+++ b/src/nuclio/common/components/edit-item/edit-item.less
@@ -50,4 +50,13 @@
         .duskThree(0.64);
         color: @color;
     }
+
+    .schedule-input-wrapper {
+        display: flex;
+        align-items: center;
+
+        .clear-button {
+            margin-left: 15px;
+        }
+    }
 }
