--- a/src/nuclio/common/components/edit-item/edit-item.tpl.html
+++ b/src/nuclio/common/components/edit-item/edit-item.tpl.html
@@ -429,7 +429,9 @@
 
             <div class="igz-col-91 attribute-field"
                  data-ng-if="$ctrl.isClassSelected() && $ctrl.isCronTrigger()">
-                    <div class="field-label">Schedule</div>
+
+                <div class="field-label">Schedule</div>
+
                 <div class="schedule-input-wrapper">
                     <igz-validating-input-field data-field-type="schedule"
                                                 data-input-name="item_schedule"
@@ -440,7 +442,7 @@
                                                 data-update-data-callback="$ctrl.inputValueCallback(newData, field)"
                                                 data-update-data-field="attributes.schedule">
                     </igz-validating-input-field>
-                    <div class="clear-button">
+                    <div class="clear-button" data-ng-if="$ctrl.item.attributes.schedule">
                         <a class="link" data-ng-click="$ctrl.onClearButtonClick()">Clear</a>
                     </div>
                 </div>
